# bot

./: .gitignore  .gitmodules  LICENSE  Main.hs  README.md  bot.cabal  build.sbt  nginx.md  package.yaml  stack.yaml  todo.md
html/: acpo.html
project/: plugins.sbt
src/: Main.hs
src/main/scala/: acpo.scala  app.scala  bot.scala  rest.scala  util.scala
