cabal-version:       >=1.10

name:                bot
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             MIT
license-file:        LICENSE
author:              tellnobody1
maintainer:          support@apple.com
-- copyright:
-- category:
build-type:          Simple

executable bot
  main-is:             Main.hs
  build-depends:
    base,
    network,
    network-run,
    bytestring,
    utf8-string
  default-language:    Haskell2010
